# 2048

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Board.h  GameController.h  Renderer.h  Tile.h
src/: Board.cpp  GameController.cpp  Renderer.cpp  Tile.cpp  main.cpp
